# gray-code

./: .coveragerc  .isort.cfg  CONTRIBUTING.md  README.md  pyproject.toml  rect_ai.py  setup.cfg  setup.py
.github/workflows/: ci.yml
docs/: conf.py  index.md
src/: middle_ai.py
src/gray_code/: __init__.py  skeleton.py
src/middle/: __init__.py  hamcycle.py  tree.py  vertex.py
src/rect/: __init__.py  edge.py  rectangle.py  rectangulation.py  vertex.py  wall.py
tests/: conftest.py  test_ilds.py  test_lds.py  test_middle_tree.py  test_rect_edge.py  test_rect_rectangle.py  test_rect_vertex.py  test_rect_wall.py  test_skeleton.py
